Vans alignment fixed.

--- a/index.css
+++ b/index.css
@@ -188,6 +188,7 @@ footer {
 .components {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     gap: 15px;
 }
 
